# cpp-opengl-default-template

./: CMakeLists.txt
libraries/glad/: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: main.cpp
